# opencuda

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
opencuda/: __main__.py
opencuda/codegen/: emit.py
opencuda/frontend/: lexer.py  parser.py  preprocess.py
opencuda/ir/: nodes.py  optimize.py  types.py  unroll.py
opencuda/tests/: test_compiler.py
tests/: atomic_test.cu  atomic_test.ptx  atomic_test_openptxas.cubin  bitwise_test.cu  bitwise_test.ptx  break_continue.cu  break_continue.ptx  cast_test.cu  cast_test.ptx  cast_test_openptxas.cubin  compound_assign.cu  compound_assign.ptx  const_test.cu  const_test.ptx  define_test.cu  define_test.ptx  device_func.cu  device_func.ptx  device_func_openptxas.cubin  device_return.cu  device_return.ptx  do_while.cu  do_while.ptx  for_loop.cu  for_loop.ptx  gpu_bench_matmul.cu  gpu_loader.cu  gpu_matmul.cu  gpu_matmul_tiled.cu  gpu_vector_add.cu  histogram.cu  histogram.ptx  launch_bounds.cu  launch_bounds.ptx  local_array.cu  local_array.ptx  matmul_naive.cu  matmul_naive.ptx  matmul_ptxas.cubin  matmul_tiled.cu  (+63 more)
